--- a/notebooks/epa.ipynb
+++ b/notebooks/epa.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "4d0f3ab673dd78a",
    "metadata": {
     "jupyter": {
@@ -884,7 +884,7 @@
     "\n",
     "########## 训练设置区域 ###########\n",
     "\n",
-    "batch_size = 5\n",
+    "batch_size = 32\n",
     "num_workers = 0 # Windows下建议为0，Linux下可以设为 >0 的值以加速数据加载，例如 2 或 4\n",
     "shuffle_data = True # 训练时通常需要打乱数据\n",
     "\n",
@@ -895,7 +895,7 @@
     "    batch_size=batch_size,\n",
     "    shuffle=shuffle_data,\n",
     "    num_workers=num_workers,\n",
-    "    pin_memory=False  # 如果使用GPU，pin_memory可以加速数据传输\n",
+    "    pin_memory=True   # 如果使用GPU，pin_memory可以加速数据传输\n",
     ")\n",
     "\n",
     "print(f\"\\nDataLoader 创建成功。批次大小: {batch_size}, 是否打乱: {shuffle_data}\\n\")\n",
