updata base(data process and train)

--- a/notebooks/epa.ipynb
+++ b/notebooks/epa.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4d0f3ab673dd78a",
    "metadata": {
     "jupyter": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "f97177c4",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "3e2c17e1a65af2f7",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "98b4d16c",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "eaa00acc",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "0fe695ca",
    "metadata": {},
    "outputs": [
@@ -410,13 +410,7 @@
       "开始NaN值填充...\n",
       "lat_coord_name' 不是单调递增的。需要对其进行反转...\n",
       "lat是否单调递增： True\n",
-      "开始对调整坐标后的 SST 数据进行插值填充NaN...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "开始对调整坐标后的 SST 数据进行插值填充NaN...\n",
       "插值后剩余的 NaN 值数量：2839383，剩余的 NaN 将会在归一化被0填充\n"
      ]
     },
@@ -497,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "d5758827",
    "metadata": {},
    "outputs": [
@@ -585,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "6c80afd3",
    "metadata": {},
    "outputs": [
@@ -610,7 +604,7 @@
       "    sst         (time, latitude, longitude) float32 129MB 0.0 0.0 ... -1.353\n",
       "    ocean_mask  (latitude, longitude) int64 8MB 0 0 0 0 0 0 0 ... 1 1 1 1 1 1 1\n",
       "    doy_sin     (time) float64 248B 0.0 0.01717 0.03433 ... 0.4624 0.4775 0.4925\n",
-      "    doy_cos     (time) float64 248B 1.0 1.0 1.0 1.0 1.0 ... 1.0 1.0 1.0 1.0 1.0\n",
+      "    doy_cos     (time) float64 248B 1.0 0.9999 0.9994 ... 0.8867 0.8786 0.8703\n",
       "    month_sin   (time) float64 248B 0.5 0.5 0.5 0.5 0.5 ... 0.5 0.5 0.5 0.5 0.5\n",
       "    month_cos   (time) float64 248B 0.866 0.866 0.866 ... 0.866 0.866 0.866\n",
       "    year_norm   (time) float64 248B 1.0 1.0 1.0 1.0 1.0 ... 1.0 1.0 1.0 1.0 1.0\n",
@@ -640,7 +634,7 @@
     "\n",
     "## Day of Year\n",
     "doy_sin = np.sin(2 * np.pi * doy_norm)\n",
-    "doy_cos = np.cos(2 * np.pi * day_of_year)\n",
+    "doy_cos = np.cos(2 * np.pi * doy_norm)\n",
     "doy_sin.name = 'doy_sin'\n",
     "doy_cos.name = 'doy_cos'\n",
     "# print(doy_sin)\n",
@@ -692,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "52920eea",
    "metadata": {},
    "outputs": [],
@@ -780,85 +774,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "cb76e1df",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "开始创建 DataSet 和 DataLoader\n",
-      "从：../data/processed/ERA5/ERA5_20200101_20200131_normalized_filled_masked_timefeatures.nc 加载数据\n",
-      "数据加载完成，共31个时间步。\n",
-      "SST data\n",
-      "<xarray.DataArray 'sst' (time: 31, latitude: 721, longitude: 1440)> Size: 129MB\n",
-      "array([[[ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        ...,\n",
-      "        [-1.3528693, -1.3528693, -1.3528693, ..., -1.3528693,\n",
-      "         -1.3528693, -1.3528693],\n",
-      "        [-1.3528693, -1.3528693, -1.3528693, ..., -1.3528693,\n",
-      "         -1.3528693, -1.3528693],\n",
-      "        [-1.3528693, -1.3528693, -1.3528693, ..., -1.3528693,\n",
-      "         -1.3528693, -1.3528693]],\n",
-      "\n",
-      "       [[ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "...\n",
-      "        [-1.3528614, -1.3528614, -1.3528614, ..., -1.3528614,\n",
-      "         -1.3528614, -1.3528614],\n",
-      "        [-1.3528614, -1.3528614, -1.3528614, ..., -1.3528614,\n",
-      "         -1.3528614, -1.3528614],\n",
-      "        [-1.3528614, -1.3528614, -1.3528614, ..., -1.3528614,\n",
-      "         -1.3528614, -1.3528614]],\n",
-      "\n",
-      "       [[ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
-      "          0.       ,  0.       ],\n",
-      "        ...,\n",
-      "        [-1.3529193, -1.3529193, -1.3529193, ..., -1.3529193,\n",
-      "         -1.3529193, -1.3529193],\n",
-      "        [-1.3529193, -1.3529193, -1.3529193, ..., -1.3529193,\n",
-      "         -1.3529193, -1.3529193],\n",
-      "        [-1.3529193, -1.3529193, -1.3529193, ..., -1.3529193,\n",
-      "         -1.3529193, -1.3529193]]], dtype=float32)\n",
-      "Coordinates:\n",
-      "  * time       (time) datetime64[ns] 248B 2020-01-01 2020-01-02 ... 2020-01-31\n",
-      "  * longitude  (longitude) float32 6kB 0.0 0.25 0.5 0.75 ... 359.2 359.5 359.8\n",
-      "  * latitude   (latitude) float32 3kB -90.0 -89.75 -89.5 ... 89.5 89.75 90.0\n",
-      "Ocean Mask data\n",
-      "<xarray.DataArray 'ocean_mask' (latitude: 721, longitude: 1440)> Size: 8MB\n",
-      "array([[0, 0, 0, ..., 0, 0, 0],\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       ...,\n",
-      "       [1, 1, 1, ..., 1, 1, 1],\n",
-      "       [1, 1, 1, ..., 1, 1, 1],\n",
-      "       [1, 1, 1, ..., 1, 1, 1]])\n",
-      "Coordinates:\n",
-      "  * longitude  (longitude) float32 6kB 0.0 0.25 0.5 0.75 ... 359.2 359.5 359.8\n",
-      "  * latitude   (latitude) float32 3kB -90.0 -89.75 -89.5 ... 89.5 89.75 90.0\n",
-      "加载的时间特征['doy_sin', 'doy_cos', 'month_sin', 'month_cos', 'year_norm']\n",
-      "\n",
-      "DataLoader 创建成功。批次大小: 5, 是否打乱: True\n",
-      "\n",
-      "\n",
-      "批次 1:\n",
-      "  SST 批次形状: torch.Size([5, 1, 721, 1440])\n",
-      "  掩码批次形状: torch.Size([5, 1, 721, 1440])\n",
-      "  条件批次形状: torch.Size([5, 5])\n"
+     "ename": "NameError",
+     "evalue": "name 'processed_with_timefeatures_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m processed_nc_file \u001b[38;5;241m=\u001b[39m \u001b[43mprocessed_with_timefeatures_path\u001b[49m \u001b[38;5;66;03m# 数据处理完后的文件\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# 变量名，需要和NetCDF中的变量名一样\u001b[39;00m\n\u001b[0;32m      4\u001b[0m time_features_to_use \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdoy_sin\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdoy_cos\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth_sin\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth_cos\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124myear_norm\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# 实际上这里在小规模数据上没必要 TODO:放在大规模数据这里要考虑\u001b[39;00m\n\u001b[0;32m      8\u001b[0m ]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'processed_with_timefeatures_path' is not defined"
      ]
     }
    ],
